--- a/index.html
+++ b/index.html
@@ -165,7 +165,22 @@
             </div>
             <!-- /.site-header -->
 
-
+            <div id="site-content" class="site-content">
+                <div class="content-header content-header-left content-header-shadow vc_row">
+                    <div class="content-header-inner wrap">
+                        <div class="page-title-wrap">
+                            <div class="page-title">
+                                <h1 class="page-title-inner">Blog</h1>
+                            </div>
+                        </div>
+                        <div class="down-arrow">
+                            <a href="javascript:;">
+                                <span>Find out more</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
 
 
