--- a/blog.html
+++ b/blog.html
@@ -76,47 +76,45 @@
                                         <span></span>
                                     </a>
                                 </div>
-
-                                <nav class="navigator" itemscope="itemscope"
-                                    itemtype="https://schema.org/SiteNavigationElement">
+                                <nav class="navigator">
                                     <ul id="menu-main-menu" class="menu menu-primary">
                                         <li id="menu-item-38"
                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-2 current_page_item menu-item-38">
-                                            <a href="index.html" aria-current="page" data-ps2id-api="true">Home</a>
+                                            <a href="index.html">Home</a>
                                         </li>
                                         <li id="menu-item-37"
                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-37">
-                                            <a href="" data-ps2id-api="true">About Us</a></li>
+                                            <a href="">About Us</a></li>
                                         <li id="menu-item-407"
                                             class="style1 menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-407">
-                                            <a href="#" data-ps2id-api="true">What we do</a>
+                                            <a href="#">What we do</a>
                                             <ul class="sub-menu">
                                                 <li id="menu-item-36"
                                                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-36">
-                                                    <a href="#" data-ps2id-api="true"><img
+                                                    <a href="#"><img
                                                             src="images/2020/10/i1.svg">Content
                                                         Writing</a></li>
                                                 <li id="menu-item-413"
                                                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-413">
-                                                    <a href="#" data-ps2id-api="true"><img
+                                                    <a href="#"><img
                                                             src="images/2020/10/i2.svg">Video
                                                         Marketing</a>
                                                 </li>
                                                 <li id="menu-item-414"
                                                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-414">
-                                                    <a href="#" data-ps2id-api="true"><img
+                                                    <a href="#"><img
                                                             src="images/2020/10/i3-1.svg">Graphic
                                                         Design</a>
                                                 </li>
                                                 <li id="menu-item-415"
                                                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-415">
-                                                    <a href="#" data-ps2id-api="true"><img
+                                                    <a href="#"><img
                                                             src="images/2020/10/i4.svg">Lead
                                                         Magnet Creation</a>
                                                 </li>
                                                 <li id="menu-item-416"
                                                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-416">
-                                                    <a href="#" data-ps2id-api="true"><img
+                                                    <a href="#"><img
                                                             src="images/2020/10/i5.svg">Content
                                                         Marketing</a>
                                                 </li>
@@ -124,34 +122,34 @@
                                         </li>
                                         <li id="menu-item-35"
                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-35">
-                                            <a href="#" data-ps2id-api="true">Case Studies</a>
+                                            <a href="#">Case Studies</a>
                                             <ul class="sub-menu">
                                                 <li id="menu-item-603"
                                                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-603">
-                                                    <a href="#" data-ps2id-api="true">Work
+                                                    <a href="#">Work
                                                         Style #1</a>
                                                 </li>
                                                 <li id="menu-item-622"
                                                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-622">
-                                                    <a href="#" data-ps2id-api="true">Work
+                                                    <a href="#">Work
                                                         Style #2</a>
                                                 </li>
                                                 <li id="menu-item-604"
                                                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-604">
-                                                    <a href="#" data-ps2id-api="true">Work
+                                                    <a href="#">Work
                                                         Style #3 &#8211; Default</a>
                                                 </li>
                                             </ul>
                                         </li>
                                         <li id="menu-item-34"
                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-34">
-                                            <a href="#" data-ps2id-api="true">Blog</a></li>
+                                            <a href="#">Blog</a></li>
                                         <li id="menu-item-33"
                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33">
-                                            <a href="#" data-ps2id-api="true">Pricing</a></li>
+                                            <a href="#">Pricing</a></li>
                                         <li id="menu-item-32"
                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-32">
-                                            <a href="#" data-ps2id-api="true">Contact Us</a>
+                                            <a href="#">Contact Us</a>
                                         </li>
                                     </ul>
                                     <div class="nav-info">
@@ -167,7 +165,6 @@
                                                 class="fa fa-youtube-play"></i></a>
                                     </div>
                                 </nav>
-
                             </div>
                         </div>
                     </div>
