--- a/index.html
+++ b/index.html
@@ -249,17 +249,17 @@
                                                     <option value="">Get a FREE quote for your business</option>
                                                     <option value="">Other</option>
                                                 </select>
-                                                <div class="contactExperts sm dark no-border hd-md">
+                                                <div class="contactExperts">
                                                     <div class="images">
-                                                        <span>
+                                                        <div>
                                                             <img src="images/2020/10/Oval-Copy-59.jpg" alt="">
-                                                        </span>
-                                                        <span>
+                                                        </div>
+                                                        <div>
                                                             <img src="images/2020/10/Oval-Copy-17.jpg" alt="">
-                                                        </span>
-                                                        <span>
+                                                        </div>
+                                                        <div>
                                                             <img src="images/2020/10/Oval-Copy-30.jpg" alt="">
-                                                        </span>
+                                                        </div>
                                                     </div>
                                                     <div class="content">
                                                         Need help? <a href="#">Contact our experts</a><br>
