--- a/services.html
+++ b/services.html
@@ -228,7 +228,7 @@
                     </div>
                 </div>
 
-                <div class="tf-section pt80 wg-makes">
+                <!-- <div class="tf-section pt80 wg-makes">
                     <div class="tf-container">
                         <div class="row mb-60">
                             <div class="col-12">
@@ -240,7 +240,7 @@
                         </div>
                       
                     </div>
-                </div>
+                </div> -->
 
                 <div class="tf-section pt80 pb80 wg-feature">
                     <div class="tf-container full">
